perf(7.0): empty-collection shortcuts and lazy custom-claim init
Three related allocation savings on the JWT and Header builders:

1. Both builders now lazy-init their custom-claims / custom-parameters
   LinkedHashMap on first write. Constructing JWT.builder() or
   Header.builder() no longer allocates an empty LinkedHashMap (with
   its 16-slot backing table) that may go unused.

2. Both constructors short-circuit to Collections.emptyMap() when the
   builder's custom map is null or empty, skipping the
   new LinkedHashMap<>(empty) + Collections.unmodifiableMap() pair
   that the previous code paid unconditionally. Reads against the
   resulting JWT/Header are unchanged: emptyMap() supports get,
   entrySet, equals, and hashCode the same way.

3. JWT.Builder.audience(String) and JWT.fromMap's single-string aud
   path now use List.of(s) instead of
   new ArrayList<>(Collections.singletonList(s)). One allocation
   instead of two for the common single-audience case. The JWT
   constructor still defensive-copies via ArrayList to remain
   null-permissive (List.copyOf rejects null elements, which would
   change behavior for callers using the audience(List) overload).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>